--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </section>
 
 <!-- COVER -->
-<div class="cover"></div>  
+<div class="cover__2"></div>  
 
 <!-- SEASONS -->
 <section class="section__seasons">
@@ -118,7 +118,23 @@
 </section>            
 
 
+<!-- COVER -->
+<div class="cover__3"></div>  
 
+
+<!--SECTION NATURAL  -->
+<section class="section__natural">
+    <div class="container">
+        <div class="natural__item">
+            <h2 class="natural__title">Made From Nature, For Nature</h2>
+            <h3 class="natural__subtitle">We craft with planet-friendly natural materials, like merino wool and eucalyptus trees, <br>because they're our best chance for a sustainable future.</h3>
+
+            <button class="button__natural">
+                <a href="#">See now</a>
+            </button>         
+        </div>
+    </div>
+</section>
              
 
 
