add section cover-4

--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
 <div class="cover__3"></div>  
 
 
-<!--SECTION NATURAL  -->
-<section class="section__natural">
+<!--SECTION COVER  -->
+<section class="section__cover">
     <div class="container">
-        <div class="natural__item">
-            <h2 class="natural__title">Made From Nature, For Nature</h2>
-            <h3 class="natural__subtitle">We craft with planet-friendly natural materials, like merino wool and eucalyptus trees, <br>because they're our best chance for a sustainable future.</h3>
+        <div class="coverl__item">
+            <h2 class="cover__title">Made From Nature, For Nature</h2>
+            <h3 class="cover__subtitle">We craft with planet-friendly natural materials, like merino wool and eucalyptus trees, <br>because they're our best chance for a sustainable future.</h3>
 
-            <button class="button__natural">
+            <button class="button__cover">
                 <a href="#">See now</a>
             </button>         
         </div>
@@ -173,7 +173,24 @@
     </div>
 </section>           
 
-    
+
+<!-- COVER -->
+<div class="cover__4"></div>  
+
+
+<!--SECTION COVER  -->
+<section class="section__cover">
+    <div class="container">
+        <div class="cover__item">
+            <h2 class="cover__title">Reversing Climate Change Through Better <br>Business</h2>
+            <h3 class="cover__subtitle">Reducing our environmental impact has been a top priority since day one. But now, <br>we’re taking things further. Explore our overall sustainability approach, our progress <br> thus far, and our bold list of commitments for 2025.</h3>
+
+            <button class="button__cover">
+                <a href="#">Our Sustainable Practices</a>
+            </button>         
+        </div>
+    </div>
+</section>   
 
 
 
