--- a/index.html
+++ b/index.html
@@ -25,13 +25,22 @@
             </div>
 
             <div class="logo">
-
+                <img class="logo__img" src="assets/images/logo/logo.png" width="120px" height="38px" alt="">
             </div>
                 
             <div class="nav__2">
                 <a href="#">Sustainability</a>
-                <a href="#">Stores</a>    
+                <a href="#">Stores</a>           
             </div>
+
+            <div class="icon__logo">
+                <img src="assets/images/logo/icon-1.png" width="30px" height="30px" alt="">
+                <img src="assets/images/logo/icon-2.png" width="30px" height="30px"  alt="">
+                <img class="icon__3" src="assets/images/logo/icon-3.png" width="30px" height="30px"  alt="">
+            </div>
+
+
+
         </div>   
     </div>
  </header>
