--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
         <div class="section__item">
             <div class="section__inner">
-                <img src="assets/images/collection/coll-1.jfif" width="396px" height="396px" alt="">
+                <img class="inner__img" src="assets/images/collection/coll-1.jfif" width="396px" height="396px" alt="">
                 
                 <div class="text">
                     <p class="inner__title">New Arrivals</p>
@@ -187,7 +187,7 @@
             </div>
 
             <div class="section__inner">
-                <img src="assets/images/collection/coll-2.jfif" width="396px" height="396px" alt="">
+                <img class="inner__img" src="assets/images/collection/coll-2.jfif" width="396px" height="396px" alt="">
 
                 <div class="text">
                     <p class="inner__title">Natural Run Collection</p>
@@ -196,7 +196,7 @@
             </div>
 
             <div class="collection__inner">
-                <img src="assets/images/collection/coll-3.jfif" width="396px" height="396px" alt="">
+                <img class="inner__img" src="assets/images/collection/coll-3.jfif" width="396px" height="396px" alt="">
                 
                 <div class="text">
                     <p class="inner__title">Fresh Long Sleeve Tee Colors</p>
