--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 </div>              
             </div>
 
-            <div class="collection__inner">
+            <div class="section__inner">
                 <img class="inner__img" src="assets/images/collection/coll-3.jfif" width="396px" height="396px" alt="">
                 
                 <div class="text">
@@ -212,7 +212,7 @@
 <div class="cover__3"></div>  
 
 
-<!--SECTION COVER  -->
+<!--SECTION ТNATURAL  -->
 <section class="section__cover">
     <div class="container">
         <div class="cover__item">
