added  burger menu

--- a/index.html
+++ b/index.html
@@ -38,8 +38,15 @@
                 <img src="assets/images/logo/icon-2.png" width="30px" height="30px"  alt="">
                 <img class="icon__3" src="assets/images/logo/icon-3.png" width="30px" height="30px"  alt="">
             </div>
-        </div>   
-    </div>
+
+
+            <div class="burger">
+                <div class="line__menu"></div>
+                <div class="line__menu"></div>
+                <div class="line__menu"></div>
+            </div>
+        </div>  
+     </div>
  </header>
 
 
@@ -203,7 +210,7 @@
                     <p class="inner__text">It’s crisp, clean and ready for wherever the <br>day takes you.</p>
                 </div>
             </div>
-        </div>      
+        </div>    
     </div>
 </section>            
 
@@ -212,7 +219,7 @@
 <div class="cover__3"></div>  
 
 
-<!--SECTION ТNATURAL  -->
+<!--SECTION NATURAL  -->
 <section class="section__cover">
     <div class="container">
         <div class="cover__item">
