save media header

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
 
             <div class="burger">
-                <div class="line__menu"></div>
-                <div class="line__menu"></div>
-                <div class="line__menu"></div>
+                <div class="line__burger"></div>
+                <div class="line__burger"></div>
+                <div class="line__burger"></div>
             </div>
         </div>  
      </div>
